Terraform-variables/SecurityGroup/sg.tf
resource "aws_security_group" "ec2_sg" {
	name = "allow_http"
	description = "Allow http inbound traffic"
	vpc_id = data.aws_vpc.GetVPC.id

	ingress {
		from_port = 443
		to_port = 443
		protocol = "tcp"
		cidr_blocks = ["0.0.0.0/0"]
	}

	ingress {
		from_port = 80
		to_port = 80
		protocol = "tcp"
		cidr_blocks = ["0.0.0.0/0"]
	}

	egress {
		from_port = 0
		to_port = 0
		protocol = "-1"
		cidr_blocks = ["0.0.0.0/0"]
	}
	tags = {
		Name = "ec2-security-group"
	}
}
